--- a/foodgram/templates/formRecipe.html
+++ b/foodgram/templates/formRecipe.html
@@ -15,14 +15,14 @@
     </div>
 
     <div class="form-container">
-        <form class="form" method="post" enctype="multipart/form-data">
+        <form class="form" method="post" enctype="multipart/form-data" action="{% url 'new_recipe' %}">
             {% csrf_token %}
 
              <div class="form__group">
                 <label for="{{ form.title.id_for_label }}" class="form__label">Название рецепта</label>
                 <div class="form__field-group">
 
-                    {{ form.title|addclass:"form__input"}}
+                    {{ form.title|addclass:"form__input" }}
 
                     {% if form.errors %}
                         {% for errors in title.errors %}
@@ -33,34 +33,29 @@
             </div>
 
             <div class="form__group">
-                {% csrf_token %}
                 <p class="form__label">Теги</p>
                 <div class="form__field-group">
                     <div class="tags">
                         {% if recipe %}
-                            {% for tag in tags %}
+                            {% for tag in tag_list %}
                                 <div class="tags__item">
                                     <input type="checkbox" name="tags" value="{{ tag.id }}" id="id_{{ tag.name }}"
                                            class="tags__checkbox tags__checkbox_style_{{ tag.color}}" {% if tag in recipe.tags.all %}checked{% endif %}>
-                                    <label for="id_{{ tag.name }}" class="tags__label">{{ tag.name }}</label>
+                                    <label for="id_{{ tag.id }}" class="tags__label">{{ tag.name }}</label>
                                 </div>
                             {% endfor %}
                         {% else %}
                             {% for tag in form.fields.tag.choices.queryset %}
                                 <div class="tags__item">
-                                    <input type="checkbox" name="tags" value="{{ tag.pk }}" id="id_{{ tag.name }}"
-                                           class="tags__checkbox tags__checkbox_style_{{ tag.color}}">
+                                    <input type="checkbox" name="tags" id="id_{{ tag.name }}" class="tags__checkbox tags__checkbox_style_{{ tag.color }}" value="{{ tag.id }}"
+                                    {% if tag.id in form.tag.value %} checked {% endif %}>
                                     <label for="id_{{ tag.name }}" class="tags__label">{{ tag.title }}</label>
                                 </div>
                             {% endfor %}
                         {% endif %}
                         </div>
 
-                        {% if form.errors %}
-                            {% for errors in form.tag.errors %}
-                                <span class="form__error">{{ error|escape}}</span>
-                            {% endfor %}
-                        {% endif %}
+                        <span class="form__error">{{ form.tag.errors }}</span>
 
                     </div>
                 </div>
@@ -92,7 +87,7 @@
                 <label for="{{ form.cooking_time.id_for_label }}" class="form__label">Время приготовления</label>
                 <div class="form__field-group form__field-group_time">
                     {{ form.cooking_time|addclass:"form__input" }}
-                    <label for="id_time" class="form__label">минут</label>
+                    <label for="{{ form.cooking_time.id_for_label }}" class="form__label">минут</label>
                         {% if form.errors %}
                             {% for errors in field.errors %}
                                 <span class="form__error">{{ error|escape}}</span>
@@ -103,21 +98,29 @@
 
 
             <div class="form__group">
-                <label for="id_description" class="form__label">Описание</label>
+                <label for="{{ form.description.id_for_label }}" class="form__label">Описание</label>
                 <div class="form__field-group">
-                    <textarea name="description" id="id_description" rows="8" class="form__textarea"></textarea>
-                    <span class="form__error"></span>
+                    {{ form.description|addclass:"form__textarea" }}
+                        {% if form.errors %}
+                            {% for errors in field.errors %}
+                                <span class="form__error">{{ error|escape}}</span>
+                            {% endfor %}
+                        {% endif %}
                 </div>
             </div>
             <div class="form__group">
                 <span class="form__label">Загрузить фото</span>
                 <div class="form__field-group">
-                    <input type="file" name="file" id="id_file">
-                    <span class="form__error"></span>
+                    {{ form.image|addclass:"form__file-button" }}
+                        {% if form.errors %}
+                            {% for errors in field.errors %}
+                                <span class="form__error">{{ error|escape}}</span>
+                            {% endfor %}
+                        {% endif %}
                 </div>
             </div>
             <div class="form__footer">
-                <button class="button button_style_blue">Создать рецепт</button>
+                <button type="submit" class="button button_style_blue">Создать рецепт</button>
             </div>
         </form>
     </div>
