--- a/foodgram/templates/singlePage.html
+++ b/foodgram/templates/singlePage.html
@@ -20,12 +20,14 @@
                 <div class="single-card__header-info">
                     <h1 class="single-card__title">{{ object.title }}</h1>
                     <div class="single-card__favorite">
-                        {% if recipe|is_favorite:user %}
-                            <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_big icon-favorite_active"></span></button>
-                            <div class="single-card__favorite-tooltip tooltip">Удалить из избранного</div>
-                        {% else %}
-                            <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite icon-favorite_big"></span></button>
-                            <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
+                        {% if  user.is_authenticated %}
+                            {% if recipe|is_favorite:user %}
+                                <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_big icon-favorite_active"></span></button>
+                                <div class="single-card__favorite-tooltip tooltip">Удалить из избранного</div>
+                            {% else %}
+                                <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite icon-favorite_big"></span></button>
+                                <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
+                            {% endif %}
                         {% endif %}
                     </div>
                 </div>
